Added a new feature to create playlist

--- a/music/public/index.html
+++ b/music/public/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <!-- Bootstrap CSS -->
 
     <!-- Font Awesome Icons CSS -->
@@ -19,7 +20,7 @@
       crossorigin="anonymous"
     />
 
-    <title>React App</title>
+    <title>MUSIC STREAMING SERVICE</title>
   </head>
   <body>
     <div id="root"></div>
